add forget password and reset password fields
